--- a/about_you.Rmd
+++ b/about_you.Rmd
@@ -26,7 +26,7 @@ Where did you attend High School, and did you graduate? Compare english class to
  For this class  you need a computer you can use at home.  So, what kind is it (windows, Apple, Linux)?  On a scale of 1 to 10, where 1 is a total dummy (doesn't know a mouse from a keyboard) and 10 is a complete geek (knows computer stuff in and out) How do you rate yourself?  You also need to have have internet access. How is your connection to the internet where you live?
 
 ### my answer   
-  I have a HP Laptop. I would give myself a 6. My internet connection is strong where I live.
+  I have a HP Laptop. I would give myself a 6. My internet connection is strong where I live right now.
    
 
 ## Others and You?   
